Bugfix - Safari Flex
Flex doesn't work out of the box for Safari. I've updated the container class for interoperability between (hopefully) the majority of browsers that will be used to access the site.

--- a/bonanzaStylesheet.css
+++ b/bonanzaStylesheet.css
@@ -27,7 +27,10 @@ nav a{
 
 /* flex container for containerization of articles */
 .container {
-	display: flex;
+	display: -webkit-box;	/* OLD - iOS 6-, Safari 3.1-6, BB7 */
+	display: -ms-flexbox;	/* TWEENER - IE 10 */
+	display: -webkit-flex; 	/* NEW - Safari 6.1+, iOS 7.1+, BB10 */
+	display: flex; 			/* NEW, Spec - Firefox, Chrome, Opera */
 	flex-wrap: nowrap;
 	justify-content: space-between;
 	max-width: 95%;
